--- a/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
@@ -57,43 +57,43 @@
       "awg:\n",
       "\tparameter               value\n",
       "--------------------------------------------------------------------------------\n",
-      "IDN                      :\t{'vendor': 'TEKTRONIX', 'model': 'AWG70002A', 'ser...\n",
+      "IDN                      :\t{'serial': 'B020397', 'model': 'AWG70002A', 'firmw...\n",
       "clock_external_frequency :\t6.25e+09 (Hz)\n",
       "clock_source             :\tInternal \n",
       "current_directory        :\t\"\\Users\\OEM\\Documents\" \n",
       "mode                     :\tAWG \n",
-      "sample_rate              :\t1e+09 (Sa/s)\n",
+      "sample_rate              :\t1e+10 (Sa/s)\n",
       "timeout                  :\t10 (s)\n",
-      "awg_ch1:\n",
-      "\tparameter      value\n",
-      "--------------------------------------------------------------------------------\n",
-      "awg_amplitude   :\t0.3 (V)\n",
-      "fgen_amplitude  :\t0.074 (V)\n",
-      "fgen_dclevel    :\t0 (V)\n",
-      "fgen_frequency  :\t1e+07 (Hz)\n",
-      "fgen_offset     :\t0 (V)\n",
-      "fgen_period     :\t1e-07 (s)\n",
-      "fgen_phase      :\t0 (degrees)\n",
-      "fgen_signalpath :\tdirect \n",
-      "fgen_symmetry   :\t50 (%)\n",
-      "fgen_type       :\tNone \n",
-      "resolution      :\t8 \n",
-      "state           :\t0 \n",
       "awg_ch2:\n",
       "\tparameter      value\n",
       "--------------------------------------------------------------------------------\n",
       "awg_amplitude   :\t0.3 (V)\n",
       "fgen_amplitude  :\t0.5 (V)\n",
       "fgen_dclevel    :\t0 (V)\n",
-      "fgen_frequency  :\t1e+07 (Hz)\n",
+      "fgen_frequency  :\t4.38e+09 (Hz)\n",
       "fgen_offset     :\t0 (V)\n",
-      "fgen_period     :\t1e-07 (s)\n",
+      "fgen_period     :\t2.2831e-10 (s)\n",
       "fgen_phase      :\t0 (degrees)\n",
       "fgen_signalpath :\tdirect \n",
       "fgen_symmetry   :\t50 (%)\n",
       "fgen_type       :\tTRIANGLE \n",
       "resolution      :\t8 \n",
-      "state           :\t0 \n"
+      "state           :\t0 \n",
+      "awg_ch1:\n",
+      "\tparameter      value\n",
+      "--------------------------------------------------------------------------------\n",
+      "awg_amplitude   :\t0.25 (V)\n",
+      "fgen_amplitude  :\t0.074 (V)\n",
+      "fgen_dclevel    :\t0 (V)\n",
+      "fgen_frequency  :\t4.38e+09 (Hz)\n",
+      "fgen_offset     :\t0 (V)\n",
+      "fgen_period     :\t2.2831e-10 (s)\n",
+      "fgen_phase      :\t0 (degrees)\n",
+      "fgen_signalpath :\tdirect \n",
+      "fgen_symmetry   :\t50 (%)\n",
+      "fgen_type       :\tSQUARE \n",
+      "resolution      :\t8 \n",
+      "state           :\t1 \n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
        "['examplewaveform1']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -458,74 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 2, 3, 20000)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(wfms)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([[array([[  0.00000000e+00,   4.71262453e-05,   9.42524860e-05, ...,\n",
-       "            -9.42524860e-05,  -4.71262453e-05,  -3.67394040e-17],\n",
-       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]]),\n",
-       "   array([[  0.00000000e+00,   5.00025001e-06,   1.00005000e-05, ...,\n",
-       "             9.99899995e-02,   9.99949997e-02,   1.00000000e-01],\n",
-       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])],\n",
-       "  [array([[  0.00000000e+00,   5.00025001e-06,   1.00005000e-05, ...,\n",
-       "             9.99899995e-02,   9.99949997e-02,   1.00000000e-01],\n",
-       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]]),\n",
-       "   array([[  0.00000000e+00,   4.71262453e-05,   9.42524860e-05, ...,\n",
-       "            -9.42524860e-05,  -4.71262453e-05,  -3.67394040e-17],\n",
-       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
-       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])]],)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wfms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -539,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -559,276 +492,6 @@
     "# Finally irreversibly tear down the instrument\n",
     "awg.close()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trying stuff that doesn't work\n",
-    "\n",
-    "## 1: only a single channel specified *DOES WORK*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# clear the sequence list and waveform list (NOT ALWAYS A GOOD IDEA! BE CAREFUL!)\n",
-    "awg.clearSequenceList()\n",
-    "awg.clearWaveformList()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "awg.ch1.awg_amplitude(0.3)\n",
-    "\n",
-    "\n",
-    "N = 20000  # minimally 2400\n",
-    "\n",
-    "SR = 1e9\n",
-    "awg.sample_rate(SR)  # set the sample rate on the instrument\n",
-    "ramp_target = 0.1  # ramp target (V)\n",
-    "\n",
-    "time = np.linspace(0, N/SR, N)\n",
-    "sinesignal = 0.15*np.sin(SR/N*2*np.pi*time)\n",
-    "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
-    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
-    "rampsignal = np.linspace(0, ramp_target, N)\n",
-    "\n",
-    "# Then we compose and upload a .seqx file in 6 steps\n",
-    "\n",
-    "# Step 1: cast the waveform data into the .wfmx format\n",
-    "# To make a .wfmx, we need to know the amplitude of the output channel\n",
-    "ch1_amp = awg.ch1.awg_amplitude()\n",
-    "\n",
-    "wfm_ch1_n1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
-    "wfm_ch1_n2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
-    "\n",
-    "# Step 2: decide on sequencing information\n",
-    "# This information is provided as lists of the same length as the \n",
-    "# sequence\n",
-    "trig_waits = [0, 0]  # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
-    "nreps = [2, 3]  # 0 corresponds to infinite\n",
-    "event_jumps = [0, 0] # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
-    "event_jump_to = [0, 0]  # irrelevant if event-jump is 0, else the sequence pos. to jump to\n",
-    "go_to = [0, 1]  # 0 means next\n",
-    "\n",
-    "# Step 3: make the .seqx file\n",
-    "# The sequence must be given a name\n",
-    "\n",
-    "seqname = 'single_channel_sequence'\n",
-    "\n",
-    "seqx = awg.makeSEQXFile(trig_waits,\n",
-    "                        nreps,\n",
-    "                        event_jumps,\n",
-    "                        event_jump_to,\n",
-    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2]],\n",
-    "                        seqname)\n",
-    "\n",
-    "# Step 4: Transfer the seqx file\n",
-    "awg.sendSEQXFile(seqx, 'singlechannel.seqx')\n",
-    "\n",
-    "# Step 5: Load the seqx file\n",
-    "awg.loadSEQXFile('singlechannel.seqx')\n",
-    "# Now the sequence should appear in the sequencelist, but it is not yet assigned to channels\n",
-    "\n",
-    "# Step 6: Assign tracks from the sequence to the channels\n",
-    "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
-    "awg.ch1.setSequenceTrack(seqname, 1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2: More than 10 waveforms crash stuff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "awg.ch1.awg_amplitude(0.3)\n",
-    "\n",
-    "\n",
-    "N = 20000  # minimally 2400\n",
-    "\n",
-    "SR = 1e9\n",
-    "awg.sample_rate(SR)  # set the sample rate on the instrument\n",
-    "ramp_target = 0.1  # ramp target (V)\n",
-    "\n",
-    "time = np.linspace(0, N/SR, N)\n",
-    "sinesignal = 0.15*np.sin(SR/N*2*np.pi*time)\n",
-    "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
-    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
-    "rampsignal = np.linspace(0, ramp_target, N)\n",
-    "\n",
-    "# Then we compose and upload a .seqx file in 6 steps\n",
-    "\n",
-    "# Step 1: cast the waveform data into the .wfmx format\n",
-    "# To make a .wfmx, we need to know the amplitude of the output channel\n",
-    "ch1_amp = awg.ch1.awg_amplitude()\n",
-    "\n",
-    "no_of_waveforms = 11\n",
-    "\n",
-    "wfm1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
-    "wfm2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
-    "\n",
-    "# Step 2: decide on sequencing information\n",
-    "# This information is provided as lists of the same length as the \n",
-    "# sequence\n",
-    "trig_waits = [0]*no_of_waveforms  # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
-    "nreps = [1]*no_of_waveforms  # 0 corresponds to infinite\n",
-    "event_jumps = [0]*no_of_waveforms # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
-    "event_jump_to = [0]*no_of_waveforms  # irrelevant if event-jump is 0, else the sequence pos. to jump to\n",
-    "go_to = [0]*no_of_waveforms  # 0 means next\n",
-    "\n",
-    "wfmxs = [[wfm1]*no_of_waveforms, [wfm2]*no_of_waveforms]\n",
-    "\n",
-    "# Step 3: make the .seqx file\n",
-    "# The sequence must be given a name\n",
-    "\n",
-    "seqname = 'big_sequence_{}'.format(no_of_waveforms)\n",
-    "\n",
-    "seqx = awg.makeSEQXFile(trig_waits,\n",
-    "                        nreps,\n",
-    "                        event_jumps,\n",
-    "                        event_jump_to,\n",
-    "                        go_to, wfmxs,\n",
-    "                        seqname)\n",
-    "\n",
-    "# Step 4: Transfer the seqx file\n",
-    "awg.sendSEQXFile(seqx, 'bigsequence{}.seqx'.format(no_of_waveforms))\n",
-    "\n",
-    "# Step 5: Load the seqx file\n",
-    "awg.loadSEQXFile('bigsequence{}.seqx'.format(no_of_waveforms))\n",
-    "# Now the sequence should appear in the sequencelist, but it is not yet assigned to channels\n",
-    "\n",
-    "# Step 6: Assign tracks from the sequence to the channels\n",
-    "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
-    "awg.ch1.setSequenceTrack(seqname, 1)\n",
-    "\n",
-    "with open('bigsequence{}.seqx'.format(no_of_waveforms), 'wb') as fid:\n",
-    "    fid.write(seqx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.1/.25"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Bob:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        self._name = None\n",
-    "    \n",
-    "    @property\n",
-    "    def name(self):\n",
-    "        return self._name\n",
-    "    \n",
-    "    @name.setter\n",
-    "    def name(self, newname):\n",
-    "        if not isinstance(newname, str):\n",
-    "            raise ValueError('name must be a string')\n",
-    "        self._name = newname"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "bob = Bob()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bob.name = 'p'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "name must be a string",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-609b5fb054ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-18-5f1f7d8df386>\u001b[0m in \u001b[0;36mname\u001b[0;34m(self, newname)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name must be a string'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnewname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: name must be a string"
-     ]
-    }
-   ],
-   "source": [
-    "bob.name = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
